@startuml
'https://plantuml.com/class-diagram

interface DataRepository {
+retrieve_datas(scenario: Scenario)
+retrieve_data(scenario: Scenario)
}

class CompositeDataRepository

class OHLCVDataRepository

interface TickerMediaRepository
class NewsMediaRepository
class StockTweetsMediaRepository
class SentimentDataRepository

CompositeDataRepository -up-|> DataRepository
OHLCVDataRepository -up-|> DataRepository
SentimentDataRepository -up-|> DataRepository

CompositeDataRepository -up-> DataRepository

TickerMediaRepository <|-- NewsMediaRepository
TickerMediaRepository <|-- StockTweetsMediaRepository
SentimentDataRepository --> TickerMediaRepository

@enduml